--- a/budget.html
+++ b/budget.html
@@ -32,89 +32,126 @@
 			<!-- Two -->
 				<section class="wrapper style2">
 					<div class="inner">
-                        <h2>Budget Of The Movie:</h2><hr>
+                        <h2>Highest Budget Of The Movies:</h2><hr>
 						<div class="row">							
-							<div class="col select">
-								<select name="year" class="addselect" id="year">
-										<option value="2k21" class="l1"> Year</option>
-										<option value="2k21" class="l1"> 2021</option>
-										<option value="2k20" class="l1"> 2020</option>
-										<option value="2k19" class="l1"> 2019</option>
-										<option value="2k18" class="l1"> 2018</option>
-										<option value="2k17" class="l1"> 2017</option>
-										<option value="2k16" class="l1"> 2016</option>
-										<option value="2k15" class="l1"> 2015</option>
-										<option value="2k14" class="l1"> 2014</option>
-										<option value="2k13" class="l1"> 2013</option>
-										<option value="2k12" class="l1"> 2012</option>
-										<option value="2k11" class="l1"> 2011</option>
-										<option value="2k10" class="l1"> 2010</option>
+							<div class="col ss2">
+								<select class="choose">
+									<option disabled selected> Year </option>
+									<option value="2k21"> 2021</option>
+									<option value="2k20"> 2020</option>
+									<option value="2k19"> 2019</option>
+									<option value="2k18"> 2018</option>
+									<option value="2k17"> 2017</option>
+									<option value="2k16"> 2016</option>
+									<option value="2k15"> 2015</option>
+									<option value="2k14"> 2014</option>
+									<option value="2k13"> 2013</option>
+									<option value="2k12"> 2012</option>
+									<option value="2k11"> 2011</option>
+									<option value="2k10"> 2010</option>
 								</select><br>
-                    		</div>
+							</div>
+							<div class="col">
+								<button class="btttn"></button>
+							</div>
 						</div>
-						<table>
+						<table class="tab12">
 							<tr>
-								<th class="ww">Rank</th>
-                                <th class="ww ">Poster</th>
-								<th class="ww">Movie Name</th>
-								<th class="ww">Budget</th>
+								<th valign="middle" class="ww"><a>Rank</a></th>
+								<th valign="middle" class="ww "><a>Poster</a></th>
+								<th valign="middle" class="ww"><a>Movie Name</a></th>
+								<th class="ww" valign="middle"><a href="calender.html">Release Date</a></th>
+								<th class="ww" valign="middle"><a href="budget.html">Budget</a></th>
+								<th class="ww" valign="middle"><a href="../Domestic Box Office Collection/dom_lifetime_gross.html">Domestic Lifetime Nett</a></th>
 							</tr>
 							<tr>
 								<td>1.</td>
 								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="images/2.0.webp" width='50' height='70'/></noscript><img class=" lazyloaded" src="images/2.0.webp" data-src="images/2.0.webp" width="50" height="70"></a></td>
                                 <td><a href="detail.html">2.0</a></td>
-								<td><span>&#8377;</span>575 Cr.</td>
+								<td>26 Jan 2018</td>
+								<td><span>&#8377;</span> 575 Cr</td>
+								<td><span>&#8377;</span> 575 Cr</td>
 								</tr>
 							<tr>
 								<td>2.</td>
                                 <td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em; "><noscript><img src="images/saaho.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/saaho.jpg" data-src="images/thugs.jpg" width="50" height="70"></a></td>
 								<td><a href="detail.html">Saaho</a></td>
-								<td><span>&#8377;</span>325 Cr.</td>
+								<td><span>&#8377;</span>26 Jan 2019</td>	
+								<td><span>&#8377;</span> 325 Cr </td>
+								<td><span>&#8377;</span> 575 Cr </td>
 							</tr>
 							<tr>
 								<td>3.</td>
 								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="images/thugs.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/thugs.jpg" data-src="images/thugs.jpg" width="50" height="70"></a></td>
 								<td><a href="detail.html">Thugs Of Hindustan</a></td>
-								<td><span>&#8377;</span>310 Cr.</td>
-							</tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
+								<td><span>&#8377;</span>26 Jan 2020</td>
+								<td><span>&#8377;</span> 310 Cr</td>
+								<td><span>&#8377;</span> 575 Cr </td>	
 							</tr>
 						</table>
+						<div class="wrp">
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="images/2.0.webp" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">2.0</b></a><br>
+										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+									</p>
+								</div>
+							</div><hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="images/saaho.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Saaho</b></a><br>
+										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+									</p>
+								</div>
+							</div><hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="images/thugs.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Thugs Of Hindustan</b></a><br>
+										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+									</p>
+								</div>
+							</div><hr>
+							<div class="row">
+								<div class="col">
+									<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+												src="images/ramp.jpg" width='70' height='90' /></noscript><img
+											class="lazyloaded" src="images/simmba.jpg" data-src="images/ramp.jpg" width="70"
+											height="90"></a>
+								</div>
+								<div class="col">
+									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
+										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+									</p>
+								</div>
+							</div><hr>
+						</div>
 					</div>
-
                 </section>
         
         <!-- Footer -->
@@ -149,12 +186,12 @@
 				</div>
 				<div class="copyright">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+						<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+						<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
+					&copy; Design By: <a href="#">Tech_Marketz</a>   
 				</div>
 			</footer>
 
