--- a/index.html
+++ b/index.html
@@ -169,16 +169,16 @@
 									<h4>Worldwide Box Office Collection </h4>
 								</a></li>
 							<li><a href="budget.html">
-									<h4>Budget Of The Movies </h4>
+									<h4>Production + P&A Budget Of The Movies </h4>
 								</a></li>
 							<li><a href="screen.html">
-									<h4>Domestic Number Of Screens </h4>
+									<h4>No. Of Domestic Cinema Screens</h4>
 								</a></li>
 							<li><a href="footfalls.html">
-									<h4>Domestic Footfalls Of Movies</h4>
+									<h4>No. Of Domestic Footfalls</h4>
 								</a></li>
 							<li><a href="verdict.html">
-									<h4>Verdict Of The Movies</h4>
+									<h4>Domestic Verdict Of The Movies</h4>
 								</a></li>
 						</ul>
 					</div>
