--- a/screen.html
+++ b/screen.html
@@ -5,165 +5,233 @@
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 -->
 <html>
-	<head>
-		<title>Film - Stats: Domestic Screens</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
-	<body>
 
-		<!-- Header -->
-			<header id="header">
-				<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
-				<a href="#menu">Menu</a>
-			</header>
+<head>
+	<title>Film - Stats: Domestic Screens</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about.html">About Us </a></li>
-					<li><a href="login.html">Login/Register</a></li>
+<body>
+
+	<!-- Header -->
+	<header id="header">
+		<h1><a href="index.html">Vivek Choubey <span>Film - Stats</span></a></h1>
+		<a href="#menu">Menu</a>
+	</header>
+
+	<!-- Nav -->
+	<nav id="menu">
+		<ul class="links">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="about.html">About Us </a></li>
+			<li><a href="login.html">Login/Register</a></li>
+		</ul>
+	</nav>
+	<div id="main">
+		<!-- Two -->
+		<section class="wrapper style2">
+			<div class="inner">
+				<h2>Highest No. Of Domestic Cinema Screens:</h2>
+				<hr>
+				<div class="row">
+					<div class="col ss2">
+						<select class="choose">
+							<option disabled selected> Year </option>
+							<option value="2k21"> 2021</option>
+							<option value="2k20"> 2020</option>
+							<option value="2k19"> 2019</option>
+							<option value="2k18"> 2018</option>
+							<option value="2k17"> 2017</option>
+							<option value="2k16"> 2016</option>
+							<option value="2k15"> 2015</option>
+							<option value="2k14"> 2014</option>
+							<option value="2k13"> 2013</option>
+							<option value="2k12"> 2012</option>
+							<option value="2k11"> 2011</option>
+							<option value="2k10"> 2010</option>
+						</select><br>
+					</div>
+					<div class="col">
+						<button class="btttn"></button>
+					</div>
+				</div>
+				<table class="tab12">
+					<tr>
+						<th valign="middle" class="ww"><a>Rank</a></th>
+						<th valign="middle" class="ww "><a>Poster</a></th>
+						<th valign="middle" class="ww"><a>Movie Name</a></th>
+						<th class="ww" valign="middle"><a href="calender.html">Release Date</a></th>
+						<th class="ww" valign="middle"><a href="screen.html">No. of Screens</a></th>
+						<th class="ww" valign="middle"><a
+								href="../Domestic Box Office Collection/dom_open_day.html">Opening Day Nett:</a></th>
+					</tr>
+					<tr>
+						<td>1.</td>
+						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/thugs.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="images/thugs.jpg" data-src="images/thugs.jpg" width="50"
+									height="70"></a></td>
+						<td><a href="detail.html">Thugs Of Hindustan</a></td>
+						<td>15 Dec 2018</td>
+						<td>4700</td>
+						<td><span>&#8377;</span> 575 Cr</td>
+					</tr>
+					<td>2.</td>
+					<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+									src="images/bharat.jpg" width='50' height='70' /></noscript><img class=" lazyloaded"
+								src="images/bharat.jpg" data-src="images/bharat.jpg" width="50" height="70"></a></td>
+					<td><a href="detail.html">Bharat</a></td>
+					<td>15 Dec 2018</td>
+					<td>4650</td>
+					<td><span>&#8377;</span> 575 Cr</td>
+					</tr>
+					<tr>
+						<td>3.</td>
+						<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/tiger.jpg" width='50' height='70' /></noscript><img
+									class=" lazyloaded" src="images/tiger.jpg" data-src="images/tiger.jpg" width="50"
+									height="70"></a></td>
+						<td><a href="detail.html">Tiger Zinda Hai</a></td>
+						<td>15 Dec 2018</td>
+						<td>4600</td>
+						<td><span>&#8377;</span> 575 Cr</td>
+					</tr>
+				</table>
+				<div class="wrp">
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/thugs.jpg" data-src="images/thugs.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Thugs Of
+										Hindustan</b></a><br>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+								<a href="screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200
+								<br>
+								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening Day
+										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/saaho.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b
+										class="sx">Saaho</b></a><br>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+								<a href="screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200
+								<br>
+								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening Day
+										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/thugs.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Thugs Of
+										Hindustan</b></a><br>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+								<a href="screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200
+								<br>
+								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening Day
+										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+							</p>
+						</div>
+					</div>
+					<hr>
+					<div class="row">
+						<div class="col">
+							<a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img
+										src="images/ramp.jpg" width='70' height='90' /></noscript><img
+									class="lazyloaded" src="images/simmba.jpg" data-src="images/ramp.jpg" width="70"
+									height="90"></a>
+						</div>
+						<div class="col">
+							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b
+										class="sx">Simmba</b></a><br>
+								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
+								<a href="screen.html"><b>No. of Screens:</b></a>&nbsp;&nbsp;4200
+								<br>
+								<a href="Domestic Box Office Collection/dom_open_day.html"><b>Opening Day
+										Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+							</p>
+						</div>
+					</div>
+					<hr>
+				</div>
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<div class="flex flex-3">
+					<div class="col">
+						<h3>Box Office </h3>
+						<ul class="alt">
+							<li><a href="#">Magazine</a></li>
+							<li><a href="#">Numbers</a></li>
+							<li><a href="#">Movie Calender</a></li>
+							<li><a href="#">Subscribe</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Topics</h3>
+						<ul class="alt">
+							<li><a href="#">From the Magazine</a></li>
+							<li><a href="#">Tracking & Forecasts</a></li>
+							<li><a href="#">Numbers</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Company</h3>
+						<ul class="alt">
+							<li><a href="#">Terms & Conditions</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="copyright">
+				<ul class="icons">
+					<li><a href="http://twitter.com/VivekChoubeyyy" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.facebook.com/iVivekChoubey" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-youtube"><span class="label">Youtube</span></a></li>
+					<li><a href="http://instagram.com/vivekchoubeyy" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 				</ul>
-			</nav>
-            <div id="main">
-			<!-- Two -->
-				<section class="wrapper style2">
-					<div class="inner">
-                        <h2>Domestic Number Of Screens:</h2><hr>
-						<div class="row">							
-							<div class="col select">
-								<select name="year" class="addselect" id="year">
-										<option value="2k21" class="l1"> Year</option>
-										<option value="2k21" class="l1"> 2021</option>
-										<option value="2k20" class="l1"> 2020</option>
-										<option value="2k19" class="l1"> 2019</option>
-										<option value="2k18" class="l1"> 2018</option>
-										<option value="2k17" class="l1"> 2017</option>
-										<option value="2k16" class="l1"> 2016</option>
-										<option value="2k15" class="l1"> 2015</option>
-										<option value="2k14" class="l1"> 2014</option>
-										<option value="2k13" class="l1"> 2013</option>
-										<option value="2k12" class="l1"> 2012</option>
-										<option value="2k11" class="l1"> 2011</option>
-										<option value="2k10" class="l1"> 2010</option>
-								</select><br>
-                    		</div>
-						</div>
-						<table>
-							<tr>
-								<th class="ww">Rank</th>
-                                <th class="ww ">Poster</th>
-								<th class="ww">Movie Name</th>
-								<th class="ww">Number Of Screens</th>
-							</tr>
-							<tr>
-								<td>1.</td>
-								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;" ><noscript><img src="images/thugs.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/thugs.jpg" data-src="images/thugs.jpg" width="50" height="70" ></a></td>
-								<td><a href="detail.html">Thugs Of Hindustan</a></td>
-								<td>4700</td>
-							</tr>
-								<td>2.</td>
-                                <td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="images/bharat.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/bharat.jpg" data-src="images/bharat.jpg" width="50" height="70"></a></td>
-								<td><a href="detail.html">Bharat</a></td>
-								<td>4650</td>
-							</tr>
-							<tr>
-								<td>3.</td>
-								<td><a href="detail.html" style="clear: left; float: left; margin-bottom: -1em;"><noscript><img src="images/tiger.jpg" width='50' height='70' /></noscript><img class=" lazyloaded" src="images/tiger.jpg" data-src="images/tiger.jpg" width="50" height="70" ></a></td>
-								<td><a href="detail.html">Tiger Zinda Hai</a></td>
-								<td>4600</td>
-							</tr>
-							<tr>
-								<td>4.</td>
-								<td>The Power</td>
-								<td>14th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Tribhanga</td>
-								<td>15th January</td>
-							</tr>
-							<tr>
-								<td>5.</td>
-								<td>Madam Chief Minister</td>
-								<td>22nd January</td>
-							</tr>
-							<tr>
-								<td>6.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-							<tr>
-								<td>7.</td>
-								<td>XYZ</td>
-								<td>30th February</td>
-							</tr>
-							<tr>
-								<td>8.</td>
-								<td>ABC</td>
-								<td>13th March</td>
-							</tr>
-							<tr>
-								<td>9.</td>
-								<td>Aadhar</td>
-								<td>15th February</td>
-							</tr>
-						</table>
-					</div>
-
-                </section>
-        
-        <!-- Footer -->
-			<footer id="footer">
-				<div class="inner">
-					<div class="flex flex-3">
-						<div class="col">
-							<h3>Box Office </h3>
-							<ul class="alt">
-								<li><a href="#">Magazine</a></li>
-								<li><a href="#">Numbers</a></li>
-								<li><a href="#">Movie Calender</a></li>
-								<li><a href="#">Subscribe</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Topics</h3>
-							<ul class="alt">
-								<li><a href="#">From the Magazine</a></li>
-								<li><a href="#">Tracking & Forecasts</a></li>
-								<li><a href="#">Numbers</a></li>
-							</ul>
-						</div>
-						<div class="col">
-							<h3>Company</h3>
-							<ul class="alt">
-								<li><a href="#">Terms & Conditions</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="copyright">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
-					</ul>
-					&copy; Selfmade Design: <a href="#">On demand </a>. Images: <a href="https://unsplash.com">Coverr</a>. Video: <a href="https://coverr.co">Coverr</a>.
-				</div>
-			</footer>
+				&copy; Design By: <a href="#">Tech_Marketz</a>   
+			</div>
+		</footer>
 
 		<!-- Scripts -->
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+			crossorigin="anonymous"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
-	</body>
+</body>
+
 </html>
