--- a/past.html
+++ b/past.html
@@ -42,7 +42,7 @@
 				<section class="wrapper style2">
 					<div class="inner">
 						<header>
-							<a href="latest.html"><h2>Movies Released Today detail: </h2></a>
+							<a href="latest.html"><h2>Movies Released Today In Past: </h2></a>
                             <hr>
 						</header>
 						<!-- Tabbed Video Section -->
