--- a/budget.html
+++ b/budget.html
@@ -61,8 +61,8 @@
 								<th valign="middle" class="ww "><a>Poster</a></th>
 								<th valign="middle" class="ww"><a>Movie Name</a></th>
 								<th class="ww" valign="middle"><a href="calender.html">Release Date</a></th>
-								<th class="ww" valign="middle"><a href="budget.html">Budget</a></th>
-								<th class="ww" valign="middle"><a href="../Domestic Box Office Collection/dom_lifetime_gross.html">Domestic Lifetime Nett</a></th>
+								<th class="ww" valign="middle"><a href="budget.html">Budget of Movie</a></th>
+								<th class="ww" valign="middle"><a href="Domestic Box Office Collection/dom_lifetime_gross.html">Domestic Lifetime Nett</a></th>
 							</tr>
 							<tr>
 								<td>1.</td>
@@ -100,7 +100,7 @@
 								<div class="col">
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">2.0</b></a><br>
 										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="budget.html"><b>Budget of Movie:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 									</p>
 								</div>
@@ -115,7 +115,7 @@
 								<div class="col">
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Saaho</b></a><br>
 										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="budget.html"><b>Budget of Movie:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 									</p>
 								</div>
@@ -130,7 +130,7 @@
 								<div class="col">
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Thugs Of Hindustan</b></a><br>
 										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="budget.html"><b>Budget of Movie:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 									</p>
 								</div>
@@ -145,7 +145,7 @@
 								<div class="col">
 									<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Simmba</b></a><br>
 										<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-										<a href="budget.html"><b>Budget:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
+										<a href="budget.html"><b>Budget of Movie:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr<br>
 										<a href="Domestic Box Office Collection/dom_lifetime_nett.html"><b>Domestic Lifetime Nett:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 									</p>
 								</div>
