--- a/footfalls.html
+++ b/footfalls.html
@@ -66,7 +66,7 @@
 						<th class="ww" valign="middle"><a href="calender.html">Release Date</a></th>
 						<th class="ww" valign="middle"><a href="footfalls.html">No. of Footfalls</a></th>
 						<th class="ww" valign="middle"><a
-								href="../Domestic Box Office Collection/dom_lifetime_gross.html">Domestic Lifetime Gross:</a></th>
+								href="Domestic Box Office Collection/dom_lifetime_gross.html">Lifetime Gross</a></th>
 					</tr>
 					<tr>
 						<td>1.</td>
@@ -76,7 +76,7 @@
 									height="70"></a></td>
 						<td><a href="detail.html">Hum Aapke Hain Kaun</a></td>
 						<td>26 Dec 1998</td>
-						<td><span>&#8377;</span> 7.39 Cr</td>
+						<td> 7.39 Cr</td>
 						<td><span>&#8377;</span> 7.39 Cr</td>
 					</tr>
 					<tr>
@@ -87,7 +87,7 @@
 									width="50" height="70"></a></td>
 						<td><a href="detail.html">Bahubali 2 [Hindi]</a></td>
 						<td>26 Dec 2018</td>
-						<td><span>&#8377;</span> 5.25 Cr</td>
+						<td> 7.02 L</td>
 						<td><span>&#8377;</span> 7.39 Cr</td>
 					</tr>
 					<tr>
@@ -98,7 +98,7 @@
 									height="70"></a></td>
 						<td><a href="detail.html">Gadar</a></td>
 						<td>26 Dec 1996</td>
-						<td><span>&#8377;</span> 5.05 Cr</td>
+						<td> 42.85 K</td>
 						<td><span>&#8377;</span> 7.39 Cr</td>
 					</tr>
 				</table>
@@ -114,9 +114,9 @@
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Hum Aapke
 										Hain Kaun</b></a><br>
 								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp;4200
+								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp; 7.07 Cr
 								<br>
-								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
+								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -133,9 +133,9 @@
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b
 										class="sx">Saaho</b></a><br>
 								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp;4200
+								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp; 7.07 L
 								<br>
-								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
+								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -152,9 +152,9 @@
 							<p class="sz"><b class="sx">1.</b>&nbsp;&nbsp;<a href="detail.html"><b class="sx">Thugs Of
 										Hindustan</b></a><br>
 								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
-								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp;4200
+								<a href="footfalls.html"><b>No. of Footfalls:</b></a>&nbsp;&nbsp; 7.07 K
 								<br>
-								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime
+								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Lifetime
 										Gross:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
@@ -172,9 +172,9 @@
 										class="sx">Simmba</b></a><br>
 								<a href="calender.html"><b>Release Date:</b></a>&nbsp;&nbsp;1 Jan 2021<br>
 								<a href="footfalls.html"><b>No. of Footfalls
-										:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
+										:</b></a>&nbsp;&nbsp;&nbsp;185.76 Cr
 								<br>
-								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Domestic Lifetime Gross
+								<a href="Domestic Box Office Collection/dom_lifetime_gross.html"><b>Lifetime Gross
 										:</b></a>&nbsp;&nbsp;<span>&#8377;</span>&nbsp;185.76 Cr
 							</p>
 						</div>
