--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 									<h4>Worldwide Box Office Collection </h4>
 								</a></li>
 							<li><a href="budget.html">
-									<h4>Production + P&A Budget Of The Movies </h4>
+									<h4>Production + P&A Budget Of Movies </h4>
 								</a></li>
 							<li><a href="screen.html">
 									<h4>No. Of Domestic Cinema Screens</h4>
@@ -208,7 +208,7 @@
 							<span class="dot" onclick="currentSlide(3)"></span>
 						</div>
 						<div  style="float:right;">
-							<a href="#"><p class="flt"><b>+&nbsp;&nbsp;See More</b></p></a>
+							<a href="rep_art.html"><p class="flt"><b>+&nbsp;&nbsp;See More</b></p></a>
 						</div><br>
 					</div>
 				</div>
