--- a/screen.html
+++ b/screen.html
@@ -66,7 +66,7 @@
 						<th class="ww" valign="middle"><a href="calender.html">Release Date</a></th>
 						<th class="ww" valign="middle"><a href="screen.html">No. of Screens</a></th>
 						<th class="ww" valign="middle"><a
-								href="../Domestic Box Office Collection/dom_open_day.html">Opening Day Nett:</a></th>
+								href="Domestic Box Office Collection/dom_open_day.html">Opening Day Nett</a></th>
 					</tr>
 					<tr>
 						<td>1.</td>
