--- a/detail.html
+++ b/detail.html
@@ -399,40 +399,40 @@
                     </div>
                     <div class="col vl1"></div>
                     <div class="col">
-                        <h3>Star Cast And Crew:</h3>
+                        <h3>Cast And Crew Credits:</h3>
                         <hr>
                         <div class="row">
                             <div class="col">
                                 <h4>Actors:</h4>
                                 <a href="filmography.html" data-tab="tab-1" class="active">
-                                    <h5 class=" s1 hvr">Ranveer Singh</h5>
+                                    <h5 class=" s1 hvr so">&emsp;Ranveer Singh&emsp;</h5>
                                 </a>
                                 <a href="filmography.html" data-tab="tab-2">
-                                    <h5 class="s1 hvr">Sara Ali Khan</h5>
+                                    <h5 class="s1 hvr so">&emsp;Sara Ali Khan&emsp;</h5>
                                 </a>
                                 <a href="filmography.html" data-tab="tab-3">
-                                    <h5 class="s1 hvr">Ashutosh Rana</h5>
+                                    <h5 class="s1 hvr so">&emsp;Ashutosh Rana&emsp;</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1 hvr">Sonu Sood</h5>
+                                    <h5 class="s1 hvr so">&emsp;Sonu Sood&emsp;</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1 hvr">Siddharth Jadhav</h5>
+                                    <h5 class="s1 hvr so">&emsp;Siddharth Jadhav&emsp;</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1">Ashok Smarth</h5>
+                                    <h5 class="s1">&emsp;Ashok Smarth</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1">Ganesh Yadav</h5>
+                                    <h5 class="s1">&emsp;Ganesh Yadav</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1">Uday Tikekar</h5>
+                                    <h5 class="s1">&emsp;Uday Tikekar</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1">etc</h5>
+                                    <h5 class="s1">&emsp;etc</h5>
                                 </a>
                                 <a href="filmography.html">
-                                    <h5 class="s1">etc</h5>
+                                    <h5 class="s1">&emsp;etc</h5>
                                 </a>
                             </div>
                             <div class="col vl2"></div>
@@ -453,19 +453,19 @@
                                         
                                     </div>
                                     <div class="col">
-                                        <a href="#">
-                                            <h5 class="s1 hvr" style="margin-top: 4px;">Rohit Shetty</h5>
+                                        <a href="filmography.html">
+                                            <h5 class="s1 hvr so" style="margin-top: 4px;">&emsp;Rohit Shetty</h5>
                                         </a>
-                                        <h5 class="s1" style="margin-top: 33px;">Rohit Shetty </h5>
-                                        <h5 class="s1">Karan Johar</h5>
-                                        <h5 class="s1" style="margin-top: 44px;">Dharma Production</h5>
-                                        <h5 class="s1">Reliance Ent.</h5>
-                                        <h5 class="s1" style="margin-top: 46px;">Rohit Shetty </h5>
-                                        <h5 class="s1" style="margin-top: 33px;">Yunus Sajawal </h5>
-                                        <h5 class="s1" style="margin-top: 30px;">Sajid - Farhad</h5>
-                                        <h5 class="s1" style="margin-top: 31px;">Dj Chetas</h5>
-                                        <h5 class="s1">Tanishk</h5>
-                                        <h5 class="s1" style="margin-top: 44px;">Rashmi Singh</h5>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 33px;">Rohit Shetty </h5></a>
+                                        <a href="filmography.html"><h5 class="s1">Karan Johar</h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 44px;">Dharma Production</h5></a>
+                                        <a href="filmography.html"><h5 class="s1">Reliance Ent.</h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 46px;">Rohit Shetty </h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 33px;">Yunus Sajawal </h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 30px;">Sajid - Farhad</h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 31px;">Dj Chetas</h5></a>
+                                        <a href="filmography.html"><h5 class="s1">Tanishk</h5></a>
+                                        <a href="filmography.html"><h5 class="s1" style="margin-top: 44px;">Rashmi Singh</h5></a>
                                         
                                     </div>
                                 </div>
