--- a/detail.html
+++ b/detail.html
@@ -104,27 +104,27 @@
                                             </div>
                                             <div class="col">
                                                 <h4><a href="Domestic Box Office Collection/dom_week.html">• Opening
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Second
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Third
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Fourth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Fifth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html"
                                                         class="gyb">• Sixth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html"
                                                         class="gyb">• Seventh
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html"
                                                         class="gyb">• Eighth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html"
                                                         class="gyb">• There
-                                                        After</a>
+                                                        After:</a>
                                                 </h4>
                                             </div>
                                             <div class="col">
@@ -146,13 +146,13 @@
                                             <div class="col-6" style="margin-left: 190px;">
                                                 <h4 class="sd"><a href="Domestic Box Office Collection/dom_week.html">•
                                                         Sixth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Seventh
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• Eighth
-                                                        Week</a><br><a
+                                                        Week:</a><br><a
                                                         href="Domestic Box Office Collection/dom_week.html">• There
-                                                        After</a></h4>
+                                                        After:</a></h4>
                                             </div>
                                             <div class="col">
                                                 <h4>
@@ -235,16 +235,16 @@
                                             </div>
                                             <div class="col-6" style="margin-left: 190px;">
                                                 <h4 class="sd"><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Bihar</a>
+                                                        href="Domestic Box Office Collection/dom_circuit.html">•Bihar:</a>
                                                     <br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Nizam-Andhra</a>
+                                                        href="Domestic Box Office Collection/dom_circuit.html">•Nizam-Andhra:</a>
                                                     <br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Mysore
+                                                        href="Domestic Box Office Collection/dom_circuit.html">•Mysore:
                                                     </a><br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Odisha</a><br><a
-                                                        href="Domestic Box Office Collection/dom_circuit.html">•Assam</a><br><a
+                                                        href="Domestic Box Office Collection/dom_circuit.html">•Odisha:</a><br><a
+                                                        href="Domestic Box Office Collection/dom_circuit.html">•Assam:</a><br><a
                                                         href="Domestic Box Office Collection/dom_circuit.html">•Tamil
-                                                        N-Kerala</a></h4>
+                                                        N-Kerala:</a></h4>
                                             </div>
                                             <div class="col">
                                                 <h4>
@@ -349,12 +349,12 @@
                                 <div class="row">
                                     <div class="col">
                                 <h4>
-                                    <a href="Overseas Box Office Collection/over_circuit.html">• USA-Canada <br>
-                                        <a href="Overseas Box Office Collection/over_circuit.html">• United Kingdom <br>
-                                        <a href="Overseas Box Office Collection/over_circuit.html">• Gulf <br>
-                                        <a href="Overseas Box Office Collection/over_circuit.html">• Australia <br>
-                                        <a href="Overseas Box Office Collection/over_circuit.html">• China <br>
-                                        <a href="Overseas Box Office Collection/over_circuit.html">• Others <br>
+                                    <a href="Overseas Box Office Collection/over_circuit.html">• USA-Canada: <br>
+                                        <a href="Overseas Box Office Collection/over_circuit.html">• United Kingdom: <br>
+                                        <a href="Overseas Box Office Collection/over_circuit.html">• Gulf: <br>
+                                        <a href="Overseas Box Office Collection/over_circuit.html">• Australia: <br>
+                                        <a href="Overseas Box Office Collection/over_circuit.html">• China: <br>
+                                        <a href="Overseas Box Office Collection/over_circuit.html">• Others: <br>
                                 </h4>
                                 </div>
                                 <div class="col">
